--- a/mobileFeatures/PhoneGap.plist
+++ b/mobileFeatures/PhoneGap.plist
@@ -19,7 +19,10 @@
 	<key>OpenAllWhitelistURLsInWebView</key>
 	<false/>
 	<key>ExternalHosts</key>
-	<array/>
+	<array>
+		<string>*.kaltura.com</string>
+		<string>*.kaltura.org</string>
+	</array>
 	<key>Plugins</key>
 	<dict>
 		<key>com.phonegap.accelerometer</key>
